fix: overflow order section

--- a/src/features/OrderSection/styles.module.css
+++ b/src/features/OrderSection/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply fixed z-50 flex flex-col justify-between right-0 bg-white border-l border-border;
+  @apply fixed z-50 flex flex-col justify-between right-0 bg-white border-l border-border overflow-y-auto;
   width: 480px;
   height: 100%;
 }
